--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Wade Elgee</a></h1>
-					<p>This is a work in progress<br />
-					So please remind me to continue this</p>
+					<p>Game Programmer</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -32,11 +31,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/wade-elgee-35b834162/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="mailto:Wade.Elgee@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -54,26 +50,26 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>Hey There!</h2>
+										<p>I'm Wade, a recent MComp Games Engineering <br />
+										graduate from Newcastle University.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>With a year of industy experience working under two different developers, I'm a hardworking, social, and team-oriented programmer. I'm deeply passionate about games both in their development, and as a hobby -- always wanting to learn more. I look forward to pushing myself to new limits, and using my skills to come up with something fun.</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Technical Skills</h3>
+									<p>I am a problem solver, who loves coding and game development passionately. Working with others to figure out solutions, and create new possibilites has always been fun and enjoyable for me. While I might not know all the tools available, I'm always on the lookout for opportunities to learn and develop new skills.</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Write all the code</li>
-										<li class="icon solid fa-cubes">Stack small boxes</li>
-										<li class="icon solid fa-book">Read books and stuff</li>
-										<li class="icon solid fa-coffee">Drink much coffee</li>
-										<li class="icon solid fa-bolt">Lightning bolt</li>
-										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-code"><u>Languages:</u><br /> C++, C#, Java.</li>
+										<li class="icon solid fa-cube"><u>Engines:</u><br /> Unity, Unreal Engine 4</li>
+										<li class="icon solid fa-code-branch"><u>Version Control / Software Experience:</u><br /> Visual Studio, Eclipse, Git, Perforce.</li>
+										<li class="icon solid fa-file-code"><u>Project Management tools:</u><br /> Trello, HacknPlan.</li>
+										<li class="icon solid fa-users"><u>Teamworking Skills:</u><br /> Agile / Waterfall Environments, Public Speaking, Team Management in University.</li>
+										<li class="icon solid fa-coffee"><u>Misc. Computer Science:</u><br /> Use of Tensorflow, Prototyping Human Computer Interaction.</li>
 									</ul>
 								</div>
 							</section>
@@ -81,81 +77,71 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Professional Projects</h3>
+									<p>Here are a couple projects I've worked on professionally!</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a class="image"><img src="images/AngryBirds.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Angry Birds VR (2019)</h4>
+												<li><b>Roles:</b> QA / Bug fixing Intern | Guru Games</li>
+												<li><b>Languages:</b> C# / Unity</li>
+												<p>A Virtual Reality game where you shoot birds at buildings. This was as part of a 4-person programming team maintaining and updating the release version. Work involved fixing bugs encountered by users after the release, through investigation, testing, and then playtesting.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Unreleased VR Game (2019)</h4>
+												<li><b>Roles:</b> Development / Programming Intern</li>
+												<li><b>Languages:</b> C# / Unity</li>
+												<p>Another VR Game that was being built from the ground up, using some assets from a previous title. This was part of a 5-Person team, including a senior programmer and artist. Work involved project management through planning features, and their implementation working towards a viable prototype</p>
 											</div>
 										</article>
 									</div>
 								</div>
 							</section>
 							
-													<!-- Three -->
+													<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Personal Work</h3>
+									<p>Some of the larger projects I've worked on </p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a class="image"><img src="images/notqwop.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Investigating Machine Learning on Unity</h4>
+												<p>A project formed from the desire to poke around UnityML, I recreated QWOP and trained AI to beat it. Most of the workload was from implementing and smoothing out gameplay, package integration, and Agent training. 
+												<br>By the time I finished, I came across lots of fun behaviour and left with a good understanding of getting TensorFlow to work on the engine.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a class="image"><img src="images/Landscape.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Benchmarking Procedural Generation on Unreal</h4>
+												<p>For a dissertation, I looked into, learned how to implement, and benchmarked uses of Procedural Mesh Generation tools in Unreal Engine 4.  This involved getting hands on and self-teaching UE4 to create two scenes – one of a forest landscape with procedural and premade foliage, and another with simple triangles, to compare the component’s performance impact.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a class="image"><img src="images/BlacksmithHero.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Blacksmith Hero</h4>
+												<p>A small two button rhythm game I worked on solo to reacquaint myself with Unity after work experience. The whole game was created from scratch, involving the creation of art assets, gameplay mechanics, and menus.</p>
 											</div>
 										</article>
 									</div>
 								</div>
 							</section>
 
-						<!-- Four -->
+						<!-- Five -->
 							<section id="five">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
+										<ul class="feature-icons">
+										<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/wade-elgee-35b834162/"><u><b>Linkedin</a></u></b></li>
+										<li class="icon solid fa-envelope"><a href="mailto:Wade.Elgee@gmail.com"><u><b>Wade.Elgee@gmail.com</a></u></b></li>
+										</ul>
 											</div>
 										</div>
 									</form>
@@ -499,7 +485,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>Banner Image &copy; <a href="https://www.freepik.com/free-vector/distressed-grunge-with-diagonal-ink-stripe-background_17562908.htm#query=grunge%20wallpaper&position=16&from_view=keyword"> vector_corp</a> on Freepik.</li><li>Angry Birds VR &copy; 2019 Resolution Games<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
