--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 											</div>
 										</article>
 										<article>
-											<a class="image"><img src="images/BlacksmithHero.jpg" alt="" /></a>
+											<a class="image"><img src="images/Game.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Blacksmith Hero</h4>
 												<p>A small two button rhythm game I worked on solo to reacquaint myself with Unity after work experience. The whole game was created from scratch, involving the creation of art assets, gameplay mechanics, and menus.</p>
