--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/wade-elgee-35b834162/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a href="mailto:Wade.Elgee@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://docs.google.com/document/d/1VeBIoOZEHAuvAch8iclERZ3Zfcwmb9Tv/edit?usp=drive_link&ouid=113839564638359787740&rtpof=true&sd=true" class="icon solid fa-file"><span class="label">CV</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -55,6 +56,11 @@
 										graduate from Newcastle University.</p>
 									</header>
 									<p>With a year of industy experience working under two different developers, I'm a hardworking, social, and team-oriented programmer. I'm deeply passionate about games both in their development, and as a hobby -- always wanting to learn more. I look forward to pushing myself to new limits, and using my skills to come up with something fun.</p>
+									<ul class="feature-icons">
+									<li class="icon solid fa-file"><a href="https://docs.google.com/document/d/1VeBIoOZEHAuvAch8iclERZ3Zfcwmb9Tv/edit?usp=drive_link&ouid=113839564638359787740&rtpof=true&sd=true"><u><b>Check out my CV!</a></u></b></li>
+									</ul>
+									
+
 								</div>
 							</section>
 
